output_10.1.168/clover_field.h.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
1 error generated when compiling for host.
Error while processing /tmp/clover_field.h-955932.hip.

[HIPIFY] info: file './quda/include/clover_field.h' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 34
  UNCONVERTED refs count: 0
  CONVERSION %: 100
  REPLACED bytes: 646
  TOTAL bytes: 13659
  CHANGED lines of code: 34
  TOTAL lines of code: 416
  CODE CHANGED (in bytes) %: 5
  CODE CHANGED (in lines) %: 8
  TIME ELAPSED s: 0.56
[HIPIFY] info: CONVERTED refs by type:
  type: 34
[HIPIFY] info: CONVERTED refs by API:
  CUDA RT API: 34
[HIPIFY] info: CONVERTED refs by names:
  cudaTextureObject_t: 34
